--- a/fproject/app/views/layouts/application.html.erb
+++ b/fproject/app/views/layouts/application.html.erb
@@ -7,6 +7,9 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+<%=link_to("Home",root_path)%>
+<%=link_to("about", intern_about_path)%>
+<%=link_to("help",intern_help_path)%>
 
 <%= yield %>
 
